fixed hangman position. It displayed in wrong position after adding a navbar.

--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -62,7 +62,7 @@
   border-radius: 100%;
   position: relative;
   top: 115px;
-  right: -47.75vw;
+  right: -47.30vw;
 }
 
 .da-body {
@@ -70,8 +70,8 @@
   height: 100px;
   background: black;
   position: absolute;
-  top: 300px;
-  left: 49.75vw;
+  top: 350px;
+  left: 49.30vw;
 }
 
 .right-arm {
@@ -79,7 +79,7 @@
   height: 10px;
   background: black;
   position: absolute;
-  top: 300px;
+  top: 350px;
   left: 49.75vw;
 }
 
@@ -88,7 +88,7 @@
   height: 10px;
   background: black;
   position: absolute;
-  top: 300px;
+  top: 350px;
   right: 49.75vw;
 }
 
@@ -97,8 +97,8 @@
   height: 10px;
   background: black;
   position: absolute;
-  top: 390px;
-  left: 49.75vw;
+  top: 440px;
+  left: 49.30vw;
   rotate: 60deg;
   transform-origin: left bottom;
 }
@@ -108,8 +108,8 @@
   height: 10px;
   background: black;
   position: absolute;
-  top: 390px;
-  right: 49.75vw;
+  top: 440px;
+  right: 49.25vw;
   rotate: -60deg;
   transform-origin: right bottom;
 }
